tests/snapshots/config_fixtures__host_is_number.snap
---
source: tests/config_fixtures.rs
expression: err.to_string()
---
TOML parse error at line 2, column 8
  |
2 | host = 12345
  |        ^^^^^
invalid type: integer `12345`, expected a string
